# les-productions-majeures

./: .gitattributes  .gitignore  .prettierignore  README.md  eslint.config.cjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
backend/: pyproject.toml
backend/backend/: settings.py
backend/tests/: test_dummy.py
frontend/: index.test.ts  jest.config.ts  next.config.ts  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/atoms/: Button.tsx
frontend/src/features/theme/: ThemeContext.tsx  ThemeToggleButton.tsx  useTheme.ts
frontend/src/styles/: global.css.ts  theme.css.ts
frontend/src/styles/atoms/: button.css.ts
frontend/src/styles/themes/: dark.css.ts  light.css.ts
frontend/src/styles/tokens/: colors.ts
frontend/src/tests/features/theme/: ToggleThemeButton.test.tsx  useTheme.test.ts
src/: App.css.ts  App.tsx  main.tsx
src/hooks/: useTheme.ts
src/styles/: reset.css  theme.css.ts
src/styles/themes/: dark.css.ts  light.css.ts
src/styles/tokens/: colors.ts  dimensions.ts
src/types/: global.d.ts
